# valeTakip

ApiDeneme/: CMakeLists.txt  Main.qml  main.cpp
ApiDeneme/Ekranlar/: ArabaEkrani.qml  AyrintiEkrani.qml  Deneme.qml  EklemeEkrani.qml  ValeEkrani.qml  veri.js
